--- a/dependency-visualizer-web/src/index.html
+++ b/dependency-visualizer-web/src/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF8">
     <title>DepEndenCy ViSualiZR</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
